fix(gallery): drastically reduce structural whitespace between gallery grids to improve visual density for smaller libraries

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -5,7 +5,7 @@
 
 .gallery-main {
   padding-top: 40px;
-  padding-bottom: 120px;
+  padding-bottom: 64px;
 }
 
 .gallery-event {
